--- a/contact.html
+++ b/contact.html
@@ -1,273 +1,258 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Nostra - Contact</title>
-    <link rel="stylesheet" href="./contact.css" />
-    <!-- Google Font Link -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Monomakh&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-      rel="stylesheet"
-    />
-    <!-- Google Icon Link -->
-    <link
-      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined"
-      rel="stylesheet"
-    />
+   <head>
+      <meta charset="UTF-8" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <title>Nostra - Contact</title>
+      <link rel="stylesheet" href="./contact.css" />
+      <!-- Google Font Link -->
+      <link rel="preconnect" href="https://fonts.googleapis.com" />
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+      <link
+         href="https://fonts.googleapis.com/css2?family=Monomakh&display=swap"
+         rel="stylesheet"
+         />
+      <link rel="preconnect" href="https://fonts.googleapis.com" />
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+      <link
+         href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+         rel="stylesheet"
+         />
+      <!-- Google Icon Link -->
+      <link
+         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined"
+         rel="stylesheet"
+         />
       <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-      background: #f9f9f9;
-      color: #333;
-    }
-
-    .contact-section {
-      max-width: 900px;
-      margin: 40px auto;
-      padding: 20px;
-      background: #fff;
-      border-radius: 12px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-    }
-
-    .contact-section h2 {
-      text-align: center;
-      margin-bottom: 10px;
-      font-size: 28px;
-      color: #444;
-    }
-
-    .contact-section p {
-      text-align: center;
-      margin-bottom: 30px;
-      color: #666;
-    }
-
-    .contact-info {
-      display: flex;
-      justify-content: space-between;
-      flex-wrap: wrap;
-      margin-bottom: 30px;
-    }
-
-    .info-box {
-      flex: 1 1 250px;
-      margin: 10px;
-      padding: 15px;
-      background: #f3f3f3;
-      border-radius: 8px;
-    }
-
-    .info-box h3 {
-      margin-bottom: 5px;
-      font-size: 18px;
-      color: #222;
-    }
-
-    form {
-      display: flex;
-      flex-direction: column;
-    }
-
-    form input, form textarea {
-      padding: 12px;
-      margin: 8px 0;
-      border: 1px solid #ccc;
-      border-radius: 8px;
-      font-size: 15px;
-    }
-
-    form button {
-      padding: 12px;
-      background: #007bff;
-      color: white;
-      border: none;
-      border-radius: 8px;
-      font-size: 16px;
-      cursor: pointer;
-      transition: background 0.3s ease;
-    }
-
-    form button:hover {
-      background: #0056b3;
-    }
-
-    .social-links {
-      text-align: center;
-      margin-top: 20px;
-    }
-
-    .social-links a {
-      margin: 0 10px;
-      text-decoration: none;
-      color: #007bff;
-      font-weight: bold;
-    }
-  </style>
-  </head>
-  <body>
-    <header>
-      <div class="container section-1">
-        <div class="section-1__title">
-          <h1>Nostra</h1>
-        </div>
-        <div class="section-1__nav">
-          <ul class="section-1_nav_ul">
-            <li>
-              <a
-                class="section-1__nav__ul__home"
-                style="color: #85c7df"
-                href="./index.html"
-                >Home</a
-              >
-            </li>
-            <li>
-              <a href="./collection.html">Collections</a>
-            </li>
-            <li>
-              <a href="./contact.html">Contact</a>
-            </li>
-          </ul>
-        </div>
-        <div class="section-1__icon">
-          <div class="icon-1">
-            <span class="material-symbols-outlined"> account_circle </span>
-            <p>login</p>
-          </div>
-          <div class="icon-1">
-            <span class="material-symbols-outlined"> shopping_cart </span>
-            <p>cart</p>
-          </div>
-        </div>
-                <div class="meu-bar"><ion-icon name="menu-outline"></ion-icon></div>
-
-      </div>
-    </header>
-    <main class="container">
-      <section class="contact-section">
-        <h2>Contact Us</h2>
-        <p>
-          Have any questions or need help? Fill out the form below or use our
-          contact details to reach us.
-        </p>
-
-        <div class="contact-info">
-          <div class="info-box">
-            <h3>📍 Address</h3>
-            <p>  Newyork 12, USA.</p>
-          </div>
-          <div class="info-box">
-            <h3>📞 Phone</h3>
-            <p>1.800.123.456789</p>
-          </div>
-          <div class="info-box">
-            <h3>📧 Email</h3>
-            <p> contact@Nostra.com</p>
-          </div>
-        </div>
-
-        <form>
-          <input type="text" placeholder="Your Name" required />
-          <input type="email" placeholder="Your Email" required />
-          <input type="text" placeholder="Subject" />
-          <textarea rows="5" placeholder="Your Message" required></textarea>
-          <button type="submit">Send Message</button>
-        </form>
-
-        <div class="social-links">
-          <p>Follow us on:</p>
-          <a href="#">Instagram</a> | <a href="#">Facebook</a> |
-          <a href="#">Twitter</a>
-        </div>
-      </section>
-    </main>
-    <footer class="footer">
-      <div class="footer-main container">
-        <div class="footer-main-1">
-          <div class="section-1__title">
-            <h1>Nostra</h1>
-          </div>
-          <div class="footer__section-1__icon">
-            <ion-icon name="location-outline"></ion-icon>
+         body {
+         font-family: Arial, sans-serif;
+         margin: 0;
+         padding: 0;
+         background: #f9f9f9;
+         color: #333;
+         }
+         .contact-section {
+         max-width: 900px;
+         margin: 40px auto;
+         padding: 20px;
+         background: #fff;
+         border-radius: 12px;
+         box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+         }
+         .contact-section h2 {
+         text-align: center;
+         margin-bottom: 10px;
+         font-size: 28px;
+         color: #444;
+         }
+         .contact-section p {
+         text-align: center;
+         margin-bottom: 30px;
+         color: #666;
+         }
+         .contact-info {
+         display: flex;
+         justify-content: space-between;
+         flex-wrap: wrap;
+         margin-bottom: 30px;
+         }
+         .info-box {
+         flex: 1 1 250px;
+         margin: 10px;
+         padding: 15px;
+         background: #f3f3f3;
+         border-radius: 8px;
+         }
+         .info-box h3 {
+         margin-bottom: 5px;
+         font-size: 18px;
+         color: #222;
+         }
+         form {
+         display: flex;
+         flex-direction: column;
+         }
+         form input, form textarea {
+         padding: 12px;
+         margin: 8px 0;
+         border: 1px solid #ccc;
+         border-radius: 8px;
+         font-size: 15px;
+         }
+         form button {
+         padding: 12px;
+         background: #007bff;
+         color: white;
+         border: none;
+         border-radius: 8px;
+         font-size: 16px;
+         cursor: pointer;
+         transition: background 0.3s ease;
+         }
+         form button:hover {
+         background: #0056b3;
+         }
+         .social-links {
+         text-align: center;
+         margin-top: 20px;
+         }
+         .social-links a {
+         margin: 0 10px;
+         text-decoration: none;
+         color: #007bff;
+         font-weight: bold;
+         }
+      </style>
+   </head>
+   <body>
+      <header>
+         <div class="container section-1">
+            <div class="section-1__title">
+               <h1>Nostra</h1>
+            </div>
+            <div class="section-1__nav">
+               <ul class="section-1_nav_ul">
+                  <li>
+                     <a
+                        class="section-1__nav__ul__home"
+                        style="color: #85c7df"
+                        href="./index.html"
+                        >Home</a
+                        >
+                  </li>
+                  <li>
+                     <a href="./collection.html">Collections</a>
+                  </li>
+                  <li>
+                     <a href="./contact.html">Contact</a>
+                  </li>
+               </ul>
+            </div>
+            <div class="section-1__icon">
+               <div class="icon-1">
+                  <span class="material-symbols-outlined"> account_circle </span>
+                  <p>login</p>
+               </div>
+               <div class="icon-1">
+                  <span class="material-symbols-outlined"> shopping_cart </span>
+                  <p>cart</p>
+               </div>
+            </div>
+            <div class="meu-bar">
+               <ion-icon name="menu-outline"></ion-icon>
+            </div>
+         </div>
+      </header>
+      <main class="container">
+         <section class="contact-section">
+            <h2>Contact Us</h2>
             <p>
-              Street No. 12,<br />
-              Newyork 12, br MD - 123, USA.
+               Have any questions or need help? Fill out the form below or use our
+               contact details to reach us.
             </p>
-          </div>
-          <div class="footer__section-1__icon">
-            <ion-icon name="call-outline"></ion-icon>
-            <p>
-              1.800.123.456789 <br />
-              1.800.123.456789
-            </p>
-          </div>
-          <div class="footer__section-1__icon">
-            <ion-icon name="mail-outline"></ion-icon>
-            <p>
-              info@Nostra.com <br />
-              contact@Nostra.com
-            </p>
-          </div>
-        </div>
-        <div class="footer-main-2">
-          <div>
-            <h4>Links</h4>
-            <p>Products</p>
-            <p>Features</p>
-            <p>Blog</p>
-            <p>Products</p>
-            <p>Features</p>
-            <p>Blog</p>
-          </div>
-        </div>
-        <div class="footer-main-3">
-          <h4>Account Info</h4>
-          <p>Products</p>
-          <p>Find a Store</p>
-          <p>Features</p>
-          <p>Privacy Policy</p>
-          <p>Blog</p>
-          <p>Press Kit</p>
-        </div>
-      </div>
-      <div class="copy-rights container">
-        &copy;2025 Nostra All right reserved.<span> webicode</span>
-      </div>
-    </footer>
-    <script
-      type="module"
-      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
-    ></script>
-    <script
-      nomodule
-      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
-    ></script>
-    <script>
-  const menuBar = document.querySelector(".meu-bar");
-  const nav = document.querySelector(".section-1__nav");
-
-  menuBar.addEventListener("click", () => {
-    nav.classList.toggle("active");
-  });
-
-  // Optional: close menu when link is clicked
-  document.querySelectorAll(".section-1__nav a").forEach(link => {
-    link.addEventListener("click", () => {
-      nav.classList.remove("active");
-    });
-  });
-</script>
-
-  </body>
+            <div class="contact-info">
+               <div class="info-box">
+                  <h3>📍 Address</h3>
+                  <p>  Newyork 12, USA.</p>
+               </div>
+               <div class="info-box">
+                  <h3>📞 Phone</h3>
+                  <p>1.800.123.456789</p>
+               </div>
+               <div class="info-box">
+                  <h3>📧 Email</h3>
+                  <p> contact@Nostra.com</p>
+               </div>
+            </div>
+            <form>
+               <input type="text" placeholder="Your Name" required />
+               <input type="email" placeholder="Your Email" required />
+               <input type="text" placeholder="Subject" />
+               <textarea rows="5" placeholder="Your Message" required></textarea>
+               <button type="submit">Send Message</button>
+            </form>
+            <div class="social-links">
+               <p>Follow us on:</p>
+               <a href="#">Instagram</a> | <a href="#">Facebook</a> |
+               <a href="#">Twitter</a>
+            </div>
+         </section>
+      </main>
+      <footer class="footer">
+         <div class="footer-main container">
+            <div class="footer-main-1">
+               <div class="section-1__title">
+                  <h1>Nostra</h1>
+               </div>
+               <div class="footer__section-1__icon">
+                  <ion-icon name="location-outline"></ion-icon>
+                  <p>
+                     Street No. 12,<br />
+                     Newyork 12, br MD - 123, USA.
+                  </p>
+               </div>
+               <div class="footer__section-1__icon">
+                  <ion-icon name="call-outline"></ion-icon>
+                  <p>
+                     1.800.123.456789 <br />
+                     1.800.123.456789
+                  </p>
+               </div>
+               <div class="footer__section-1__icon">
+                  <ion-icon name="mail-outline"></ion-icon>
+                  <p>
+                     info@Nostra.com <br />
+                     contact@Nostra.com
+                  </p>
+               </div>
+            </div>
+            <div class="footer-main-2">
+               <div>
+                  <h4>Links</h4>
+                  <p>Products</p>
+                  <p>Features</p>
+                  <p>Blog</p>
+                  <p>Products</p>
+                  <p>Features</p>
+                  <p>Blog</p>
+               </div>
+            </div>
+            <div class="footer-main-3">
+               <h4>Account Info</h4>
+               <p>Products</p>
+               <p>Find a Store</p>
+               <p>Features</p>
+               <p>Privacy Policy</p>
+               <p>Blog</p>
+               <p>Press Kit</p>
+            </div>
+         </div>
+         <div class="copy-rights container">
+            &copy;2025 Nostra All right reserved.<span> webicode</span>
+         </div>
+      </footer>
+      <script
+         type="module"
+         src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
+         ></script>
+      <script
+         nomodule
+         src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
+         ></script>
+      <script>
+         const menuBar = document.querySelector(".meu-bar");
+         const nav = document.querySelector(".section-1__nav");
+         
+         menuBar.addEventListener("click", () => {
+           nav.classList.toggle("active");
+         });
+         
+         // Optional: close menu when link is clicked
+         document.querySelectorAll(".section-1__nav a").forEach(link => {
+           link.addEventListener("click", () => {
+             nav.classList.remove("active");
+           });
+         });
+      </script>
+   </body>
 </html>
